--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                         <a class="header-address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
-            </address>            
+            </address>
         </div>
     </header>
     <!----------------------------main----------------------------------------->
@@ -84,8 +84,10 @@
                     <li class="card-list-item link">
                         <a class="portfolio-link link" href="">
                             <div class='card-images'>
-                                <img src="./images/images-portfolio/img-card1-1.jpg" alt="Banking App Interface Concept" width="360" height="300" />
-                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                                <img src="./images/images-portfolio/img-card1-1.jpg" alt="Banking App Interface Concept"
+                                    width="360" height="300" />
+                                <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                    · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
                             </div>
                             <div class="container-link">
                                 <h2 class="card-list-service">
@@ -100,8 +102,10 @@
                     <li class="card-list-item link">
                         <a href="" class="portfolio-link link">
                             <div class='card-images'>
-                                <img src="./images/images-portfolio/img-card1-1.jpg" alt="Banking App Interface Concept" height="300" />
-                            <p class='card-text'> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <img src="./images/images-portfolio/img-card1-1.jpg" alt="Banking App Interface Concept"
+                                    height="300" />
+                                <p class='card-text'> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="container-link">
                                 <h2 class="card-list-service">
@@ -117,9 +121,10 @@
                         <a href="" class="portfolio-link link">
                             <div class='card-images'>
                                 <img src="./images/images-portfolio/img-card3-1.jpg" alt="Meditaion App" width="360"
-                                height="300" />
-                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
-                            </div>                            
+                                    height="300" />
+                                <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                    · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                            </div>
                             <div class="container-link">
                                 <h2 class="card-list-service">
                                     Meditation App
@@ -134,9 +139,10 @@
                         <a href="" class="portfolio-link link">
                             <div class='card-images'>
                                 <img src="./images/images-portfolio/img-card1-2.jpg" alt="Taxi Service" width="360"
-                                height="300" />
-                            <p class='card-text'> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            </div>                            
+                                    height="300" />
+                                <p class='card-text'> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="container-link">
                                 <h2 class="card-list-service">
                                     Taxi Service
@@ -150,10 +156,11 @@
                     <li class="card-list-item link">
                         <a href="" class="portfolio-link link">
                             <div class='card-images'>
-                                <img src="./images/images-portfolio/img-card2-2.jpg" alt="Screen Illustrations" width="360"
-                                height="300" />
-                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
-                            </div>                            
+                                <img src="./images/images-portfolio/img-card2-2.jpg" alt="Screen Illustrations"
+                                    width="360" height="300" />
+                                <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                    · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                            </div>
                             <div class="container-link">
                                 <h2 class="card-list-service">
                                     Screen Illustrations
@@ -168,8 +175,9 @@
                         <a href="" class="portfolio-link link">
                             <div class='card-images'>
                                 <img src="./images/images-portfolio/img-card3-2.jpg" alt="Online Courses" width="360"
-                                height="300" />
-                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                                    height="300" />
+                                <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                    · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
                             </div>
                             <div class="container-link">
                                 <h2 class="card-list-service">
@@ -185,9 +193,10 @@
                         <a href="" class="portfolio-link link">
                             <div class='card-images'>
                                 <img src="./images/images-portfolio/img-card1-3.jpg" alt="Instagram Stories Concept"
-                                width="360" height="300" />
-                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
-                            </div>                            
+                                    width="360" height="300" />
+                                <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                    · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                            </div>
                             <div class="container-link">
                                 <h2 class="card-list-service">
                                     Instagram Stories Concept
@@ -202,9 +211,10 @@
                         <a href="" class="portfolio-link link">
                             <div class='card-images'>
                                 <img src="./images/images-portfolio/img-card2-3.jpg" alt="Organic Food" width="360"
-                                height="300" />
-                            <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
-                            </div>                           
+                                    height="300" />
+                                <p class='card-text'>14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                    · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                            </div>
                             <div class="container-link">
                                 <h2 class="card-list-service">
                                     Organic Food
@@ -219,9 +229,10 @@
                         <a href="" class="portfolio-link link">
                             <div class='card-images'>
                                 <img src="./images/images-portfolio/img-card3-3.jpg" alt="Fresh Coffee" width="360"
-                                height="300" />
-                            <p class='card-text'> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            </div>                           
+                                    height="300" />
+                                <p class='card-text'> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="container-link">
                                 <h2 class="card-list-service">
                                     Fresh Coffee
@@ -280,7 +291,7 @@
             </div>
         </div>
     </footer>
-    
+
 </body>
 
 </html>
